--- a/src/styles/LayerTable.css
+++ b/src/styles/LayerTable.css
@@ -1,5 +1,5 @@
 .percent-0 {
-    background-color: #ff0000;
+    background-color: #ff2d2d;
 }
 
 .percent-20 {
@@ -19,7 +19,7 @@
 }
 
 .percent-100 {
-    background-color: #04d204;
+    background-color: #18a4e0;
 }
 
 /* Percentage column adjustments */
@@ -29,12 +29,10 @@
 .percent-60,
 .percent-80,
 .percent-100 {
-    width: 60px !important;
+    width: 50px !important;
     color: black !important;
     font-weight: bold;
-    padding: 1px 6px !important;
-    text-align: center;
-    border: 1px solid var(--table-outline);
+    vertical-align: middle;
 }
 
 table {
